--- a/soluciones/laravelsvc.yaml
+++ b/soluciones/laravelsvc.yaml
@@ -3,11 +3,10 @@ kind: Service
 metadata:
   name: laravel-svc-2
   labels:
-    app: laravel
+    app: db
 spec:
-  type: NodePort
   selector:
-    app: laravel
+    app: db
   ports:
   - port: 3306
     targetPort: 3306
