--- a/soluciones/apartado-1/deploy.yaml
+++ b/soluciones/apartado-1/deploy.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: mysql
-          image: mysql:latest #bitnami/mariadb:latest  
+          image: mysql:8.0.37 #bitnami/mariadb:latest  
           ports:
             - containerPort: 3306
           env:
