--- a/soluciones/ejerciciocopy/mariadb/maria-db-svc.yaml
+++ b/soluciones/ejerciciocopy/mariadb/maria-db-svc.yaml
@@ -1,13 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: laravel-svc-2
+  name: mariadb-svc
+  namespace: laravel
   labels:
     app: db
 spec:
   selector:
     app: db
   ports:
-  - port: 3306
-    targetPort: 3306
-    protocol: TCP
+    - port: 3306
