--- a/soluciones/ejerciciocopy2/apartado1/laravel-svc.yaml
+++ b/soluciones/ejerciciocopy2/apartado1/laravel-svc.yaml
@@ -2,13 +2,10 @@ apiVersion: v1
 kind: Service
 metadata:
   name: laravel-svc
-  labels:
-    app: laravel
+  namespace: laravel
 spec:
   type: NodePort
   selector:
     app: laravel
   ports:
-  - port: 80
-    targetPort: 80
-    protocol: TCP
+    - port: 8000
